@@ -247,10 +247,10 @@ public class MutableFloat extends Number implements Comparable<MutableFloat>, Mu
     /**
      * Gets this mutable as an instance of Float.
      *
-     * @return a Float instance containing the value from this mutable
+     * @return a Float instance containing the value from this mutable, never null
      */
     public Float toFloat() {
-        return new Float(floatValue());
+        return Float.valueOf(floatValue());
     }
 
     //-----------------------------------------------------------------------
